--- a/home2.ui
+++ b/home2.ui
@@ -324,7 +324,7 @@ background-color: rgba(114, 129, 214, 59);
                </property>
                <property name="icon">
                 <iconset theme="zoom-out">
-                 <normaloff>.</normaloff>.</iconset>
+                 <normaloff>C:/Users/seanl/.designer/backup</normaloff>C:/Users/seanl/.designer/backup</iconset>
                </property>
                <property name="autoDefault">
                 <bool>false</bool>
@@ -2106,7 +2106,7 @@ font: 700 13pt &quot;Nirmala UI&quot;;
                      </property>
                      <property name="icon">
                       <iconset theme="zoom-out">
-                       <normaloff>.</normaloff>.</iconset>
+                       <normaloff>C:/Users/seanl/.designer/backup</normaloff>C:/Users/seanl/.designer/backup</iconset>
                      </property>
                      <property name="autoDefault">
                       <bool>false</bool>
@@ -2288,7 +2288,7 @@ font: 700 13pt &quot;Nirmala UI&quot;;
                      </property>
                      <property name="icon">
                       <iconset theme="zoom-out">
-                       <normaloff>.</normaloff>.</iconset>
+                       <normaloff>C:/Users/seanl/.designer/backup</normaloff>C:/Users/seanl/.designer/backup</iconset>
                      </property>
                      <property name="autoDefault">
                       <bool>false</bool>
@@ -2517,7 +2517,7 @@ font: 700 13pt &quot;Nirmala UI&quot;;
                      </property>
                      <property name="icon">
                       <iconset theme="zoom-out">
-                       <normaloff>.</normaloff>.</iconset>
+                       <normaloff>C:/Users/seanl/.designer/backup</normaloff>C:/Users/seanl/.designer/backup</iconset>
                      </property>
                      <property name="autoDefault">
                       <bool>false</bool>
@@ -2746,7 +2746,7 @@ font: 700 13pt &quot;Nirmala UI&quot;;
                      </property>
                      <property name="icon">
                       <iconset theme="zoom-out">
-                       <normaloff>.</normaloff>.</iconset>
+                       <normaloff>C:/Users/seanl/.designer/backup</normaloff>C:/Users/seanl/.designer/backup</iconset>
                      </property>
                      <property name="autoDefault">
                       <bool>false</bool>
@@ -2975,7 +2975,7 @@ font: 700 13pt &quot;Nirmala UI&quot;;
                      </property>
                      <property name="icon">
                       <iconset theme="zoom-out">
-                       <normaloff>.</normaloff>.</iconset>
+                       <normaloff>C:/Users/seanl/.designer/backup</normaloff>C:/Users/seanl/.designer/backup</iconset>
                      </property>
                      <property name="autoDefault">
                       <bool>false</bool>
