--- a/ui/home2.ui
+++ b/ui/home2.ui
@@ -1733,7 +1733,7 @@ border-radius:15px</string>
                 <number>0</number>
                </property>
                <item>
-                <layout class="QVBoxLayout" name="verticalLayout_18" stretch="2,6,2">
+                <layout class="QVBoxLayout" name="verticalLayout_18" stretch="1,6,3">
                  <property name="spacing">
                   <number>2</number>
                  </property>
@@ -2636,7 +2636,7 @@ font: 600 12pt &quot;Segoe UI&quot;;</string>
                     <item>
                      <widget class="QLabel" name="gpt_image">
                       <property name="sizePolicy">
-                       <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+                       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                         <horstretch>0</horstretch>
                         <verstretch>0</verstretch>
                        </sizepolicy>
@@ -2644,13 +2644,10 @@ font: 600 12pt &quot;Segoe UI&quot;;</string>
                       <property name="styleSheet">
                        <string notr="true">background-color: rgb(238, 242, 255);
 border:0px solid rgb(255, 255, 255);
-border-radius:15px;
-font: 700 11pt &quot;Segoe UI&quot;;
-color: rgba(0, 0, 0, 140);
-padding-left:180px;</string>
+border-radius:15px</string>
                       </property>
                       <property name="text">
-                       <string>No Image</string>
+                       <string/>
                       </property>
                      </widget>
                     </item>
@@ -2671,7 +2668,7 @@ padding-left:180px;</string>
                       <property name="frameShadow">
                        <enum>QFrame::Raised</enum>
                       </property>
-                      <layout class="QVBoxLayout" name="verticalLayout_19" stretch="1,2">
+                      <layout class="QVBoxLayout" name="verticalLayout_19" stretch="1,8,0,0,8">
                        <property name="spacing">
                         <number>0</number>
                        </property>
@@ -2688,7 +2685,19 @@ padding-left:180px;</string>
                         <number>0</number>
                        </property>
                        <item>
-                        <widget class="QTextEdit" name="GPT_text">
+                        <widget class="QLabel" name="label_16">
+                         <property name="styleSheet">
+                          <string notr="true">font: 700 10pt &quot;Segoe UI&quot;;
+color: rgba(0, 0, 0, 140);
+</string>
+                         </property>
+                         <property name="text">
+                          <string>Prompt for System</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QTextEdit" name="GPT_text_sys">
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                            <horstretch>0</horstretch>
@@ -2705,6 +2714,32 @@ font: 12pt &quot;Microsoft YaHei UI&quot;;</string>
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Microsoft YaHei UI'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QLabel" name="label_17">
+                         <property name="styleSheet">
+                          <string notr="true">font: 700 10pt &quot;Segoe UI&quot;;
+color: rgba(0, 0, 0, 140);
+</string>
+                         </property>
+                         <property name="text">
+                          <string>Prompt for User</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QTextEdit" name="GPT_text_user">
+                         <property name="sizePolicy">
+                          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                           <horstretch>0</horstretch>
+                           <verstretch>0</verstretch>
+                          </sizepolicy>
+                         </property>
+                         <property name="styleSheet">
+                          <string notr="true">color: rgb(0, 0, 0);
+font: 12pt &quot;Microsoft YaHei UI&quot;;</string>
                          </property>
                         </widget>
                        </item>
@@ -2739,7 +2774,7 @@ border-radius:15px
                           <property name="spacing">
                            <number>20</number>
                           </property>
-                          <item row="0" column="0">
+                          <item row="1" column="0">
                            <widget class="QPushButton" name="gpt_openfile">
                             <property name="styleSheet">
                              <string notr="true">QPushButton{
@@ -2764,32 +2799,7 @@ background-color: rgba(114, 129, 214, 59);
                             </property>
                            </widget>
                           </item>
-                          <item row="0" column="1">
-                           <widget class="QPushButton" name="gpt_run">
-                            <property name="styleSheet">
-                             <string notr="true">QPushButton{
-background-image: url(:/all/img/start.png);
-background-repeat: no-repeat;
-background-position: left center;
-border: none;
-border-left: 23px solid transparent;
-
-text-align: center;
-padding-left: 0px;
-color: rgba(0, 0, 0, 199);
-font: 700 14pt &quot;Nirmala UI&quot;;
-}
-
-QPushButton:hover{
-background-color: rgba(114, 129, 214, 59);
-}</string>
-                            </property>
-                            <property name="text">
-                             <string>Run</string>
-                            </property>
-                           </widget>
-                          </item>
-                          <item row="1" column="0">
+                          <item row="2" column="0">
                            <widget class="QPushButton" name="gpt_send">
                             <property name="styleSheet">
                              <string notr="true">QPushButton{
@@ -2815,6 +2825,31 @@ background-color: rgba(114, 129, 214, 59);
                            </widget>
                           </item>
                           <item row="1" column="1">
+                           <widget class="QPushButton" name="gpt_run">
+                            <property name="styleSheet">
+                             <string notr="true">QPushButton{
+background-image: url(:/all/img/start.png);
+background-repeat: no-repeat;
+background-position: left center;
+border: none;
+border-left: 23px solid transparent;
+
+text-align: center;
+padding-left: 0px;
+color: rgba(0, 0, 0, 199);
+font: 700 14pt &quot;Nirmala UI&quot;;
+}
+
+QPushButton:hover{
+background-color: rgba(114, 129, 214, 59);
+}</string>
+                            </property>
+                            <property name="text">
+                             <string>Run</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="2" column="1">
                            <widget class="QPushButton" name="gpt_send_image">
                             <property name="styleSheet">
                              <string notr="true">QPushButton{
